syntax = "proto3";
package m2.pb;

enum LogLevel {
    NO_LOG_LEVEL = 0;
    TRC = 1;
    GFX = 2;
    PHY = 3;
    NET = 4;
    DBG = 5;
    INF = 6;
    WRN = 7;
    ERR = 8;
    FTL = 9;
}
